objects/TW1_Estorno_Brindes__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Brinde_Retirado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brinde Retirado</label>
        <referenceTo>TW1_Brinde__c</referenceTo>
        <relationshipLabel>Estorno De Brindes (Brinde Retirado)</relationshipLabel>
        <relationshipName>Estorno_De_Brindes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Brinde_devolvido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brinde devolvido</label>
        <referenceTo>TW1_Brinde__c</referenceTo>
        <relationshipLabel>Estorno De Brindes</relationshipLabel>
        <relationshipName>Estorno_De_Brindes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Estorno De Brindes</relationshipLabel>
        <relationshipName>Estorno_De_Brindes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_Extorno__c</fullName>
        <label>Data de Extorno</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Operador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operador</label>
        <referenceTo>TW1_Operador__c</referenceTo>
        <relationshipLabel>Estorno De Brindes</relationshipLabel>
        <relationshipName>Estorno_De_Brindes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Parametros_da_Promocao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parâmetros da Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Estorno De Brindes</relationshipLabel>
        <relationshipName>Estorno_De_Brindes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Stand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stand</label>
        <referenceTo>TW1_Stand__c</referenceTo>
        <relationshipLabel>Estorno De Brindes</relationshipLabel>
        <relationshipName>Estorno_De_Brindes</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <label>Estorno De Brindes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Estorno De Brindes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estorno De Brindes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>